added tools page

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
       <a class="nav-link" href="/gallery.html">Gallery</a>
       <a class="nav-link" href="/social.html">Social</a>
       <a class="nav-link nav-active" href="/contact.html">Contact</a>
-      <a class="nav-link nav-cta" href="/tools/filament-wizard.html">Filament Wizard</a>
+      <a class="nav-link nav-cta" href="/tools.html">Tools</a>
     </div>
   </div>
 </header>
@@ -37,10 +37,10 @@
       </div>
       <p>
         If you already know the requirements, include them below (load, temp, UV, chemical exposure).
-        If not, start with Filament Wizard and paste the recommendation.
+        If not, start with Tools and paste the Filament Wizard recommendation.
       </p>
       <div class="hero-actions">
-        <a class="btn-ghost" href="/tools/filament-wizard.html">Open Filament Wizard</a>
+        <a class="btn-ghost" href="/tools.html">Open Tools</a>
       </div>
     </section>
 
