--- a/gallery.html
+++ b/gallery.html
@@ -23,7 +23,7 @@
       <a class="nav-link nav-active" href="/gallery.html">Gallery</a>
       <a class="nav-link" href="/social.html">Social</a>
       <a class="nav-link" href="/contact.html">Contact</a>
-      <a class="nav-link nav-cta" href="/tools/filament-wizard.html">Filament Wizard</a>
+      <a class="nav-link nav-cta" href="/tools.html">Tools</a>
     </div>
   </div>
 </header>
