--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <a class="nav-link" href="/gallery.html">Gallery</a>
       <a class="nav-link" href="/social.html">Social</a>
       <a class="nav-link" href="/contact.html">Contact</a>
-      <a class="nav-link nav-cta" href="/tools/filament-wizard.html">Filament Wizard</a>
+      <a class="nav-link nav-cta" href="/tools.html">Tools</a>
     </div>
   </div>
 </header>
@@ -35,13 +35,13 @@
         <h1>3D printing done properly.</h1>
         <p>
           Clean prints. Functional parts. No guesswork.
-          Browse ready-to-order items, or use Filament Wizard to choose the right material for the job.
+          Browse ready-to-order items, or use the Tools hub to choose the right material for the job.
         </p>
 
         <div class="hero-actions">
           <a class="btn-primary" href="/shop.html">Shop featured</a>
           <a class="btn" href="/gallery.html">See real prints</a>
-          <a class="btn-ghost" href="/tools/filament-wizard.html">Open Filament Wizard</a>
+          <a class="btn-ghost" href="/tools.html">Open Tools</a>
         </div>
       </div>
     </section>
@@ -61,8 +61,8 @@
 
       <article class="panel">
         <h3>Tools</h3>
-        <p>Use-case driven material picks + pricing calculator inside Filament Wizard.</p>
-        <a class="btn btn-small" href="/tools/filament-wizard.html">Open tools</a>
+        <p>Filament Wizard + pricing calculator hub (and more tools later).</p>
+        <a class="btn btn-small" href="/tools.html">Open tools</a>
       </article>
     </section>
 
@@ -76,7 +76,7 @@
       </p>
       <div class="hero-actions">
         <a class="btn-primary" href="/contact.html">Request a quote</a>
-        <a class="btn-ghost" href="/tools/filament-wizard.html">Pick filament first</a>
+        <a class="btn-ghost" href="/tools.html">Pick filament first</a>
       </div>
     </section>
   </main>
