--- a/shop.html
+++ b/shop.html
@@ -23,7 +23,7 @@
       <a class="nav-link" href="/gallery.html">Gallery</a>
       <a class="nav-link" href="/social.html">Social</a>
       <a class="nav-link" href="/contact.html">Contact</a>
-      <a class="nav-link nav-cta" href="/tools/filament-wizard.html">Filament Wizard</a>
+      <a class="nav-link nav-cta" href="/tools.html">Tools</a>
     </div>
   </div>
 </header>
@@ -39,7 +39,7 @@
       </p>
       <div class="hero-actions">
         <a class="btn-primary" href="/contact.html">Custom order</a>
-        <a class="btn-ghost" href="/tools/filament-wizard.html">Material picker</a>
+        <a class="btn-ghost" href="/tools.html">Material picker</a>
       </div>
     </section>
 
@@ -119,7 +119,7 @@
         <article class="panel">
           <h3>Custom</h3>
           <p>Functional parts built around requirements.</p>
-          <a class="btn btn-small" href="/tools/filament-wizard.html">Start with filament</a>
+          <a class="btn btn-small" href="/tools.html">Start with tools</a>
         </article>
       </div>
     </section>
